--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,91 @@
     font-family: var(--font2);
 }
 
+.hamburger {
+    position: relative;
+    display: block;
+    width: 35px;
+    /* height: 35px; */
+    cursor: pointer;
+    appearance: none;
+    background: none;
+    outline: none;
+    border:none;
+}
+
+.hamburger .bar, .hamburger:after, .hamburger::before{
+    content:'' ;
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: black;
+    margin: 6px 0px;
+    transition: 0.4;
+}
+
+.hamburger.is-active:before{
+    transform: rotate(-45deg) translate(-8px, 6px);
+}
+
+.hamburger.is-active::after{
+    transform: rotate(45deg) translate(-9px, -8px);
+}
+
+.hamburger.is-active .bar{
+    opacity: 0;
+}
+
+.mobile-nav{
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    min-height: 100vh;
+    display: block;
+    z-index: 98;
+    background-color: #161a1d;
+    padding-top: 120px;
+    transition: 0.4s;
+}
+
+.mobile-nav a {
+    display: block;
+    text-align: center;
+    width: 100%;
+    max-width: 200px;
+    margin: 0 auto 16px;
+    padding: 12px 16px;
+    background-color: #660708;
+    text-decoration: none;
+    color: white;
+}
+
+.mobile-nav.is-active{
+    left: 0;
+}
+
+.mobile-nav a:hover{
+    background-color: black;
+}
+
+@media(min-width:768px){
+    .mobile-nav{
+    display: none;
+    }
+
+    .hamburger{
+        display: none;
+    }
+}
+
 .heading{
     font-family: var(--font1);
+    font-size: 50px;
+    text-decoration: none;
+    color: white;
 }
+
+
 
 .header-text{
     font-family: var(--font2);
